Mange/main/default/objects/Bank_Account__c/fields/ACC_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>ACC_Holder_Name__c</fullName>
    <label>ACC Holder Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>