Mange/main/default/objects/Bank_Account__c/fields/Acc_Type__c.field-meta.xml
<CustomField>
    <fullName>Acc_Type__c</fullName>
    <label>Acc Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demart Account</fullName>
            </value>
            <value>
                <fullName>Junior Sav Account</fullName>
            </value>
            <value>
                <fullName>Saving Acc</fullName>
            </value>
            <value>
                <fullName>Senior Sav Account</fullName>
            </value>
            <value>
                <fullName>Zero Bal Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>