Mange/main/default/objects/Bank_Account__c/fields/Current_Amount_to_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Current_Amount_to_Deposit__c</fullName>
    <label>Current Amount to Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>