Mange/main/default/objects/Bank_Account__c/recordTypes/custom_user.recordType-meta.xml
<RecordType>
    <fullName>custom_user</fullName>
    <active>true</active>
    <label>custom user</label>
</RecordType>