Mange/main/default/objects/Bank_Account__c/recordTypes/MAngaer.recordType-meta.xml
<RecordType>
    <fullName>MAngaer</fullName>
    <active>true</active>
    <label>MAngaer</label>
</RecordType>